# fastapi-tutorials

./: README.md
realpython/: Makefile  README.md  pyproject.toml
realpython/app/: main.py  test_main.py
realpython/src/: main.py  test_main.py
